--- a/package/history.txt
+++ b/package/history.txt
@@ -3,6 +3,11 @@ MUCOM88 Windows update history
 更新履歴
 ------------------------------------------------------------------------------
 
+2019/01/04 ver0.42
+
+	割り込みの安定性を向上
+	メモリリークの修正
+
 2018/12/25 ver0.41
 
 	Jコマンド使用時にスキップ先の行番号をコンパイル結果に表示するように修正
