--- a/package/history.txt
+++ b/package/history.txt
@@ -3,8 +3,17 @@ MUCOM88 Windows update history
 更新履歴
 ------------------------------------------------------------------------------
 
-2019/01/04 ver0.42
+2019/01/09 ver0.43
 
+	MUBフォーマットを拡張、正しい音色番号をモニタできるよう修正
+	ツール→WAVファイルとして保存、から音声ファイルを出力する機能を追加
+	BouKiCHiさんのソースコードを元にOS依存部分を分離
+
+2019/01/07 ver0.42
+
+	メニュー->ホームにプレイヤーの起動ボタンを追加
+	[SHIFT]+[F5]で演奏モニタを起動する機能を追加
+	SCCIのシステムDLLを2018/12/31版に差し替え
 	割り込みの安定性を向上
 	メモリリークの修正
 
