--- a/package/history.txt
+++ b/package/history.txt
@@ -3,6 +3,13 @@ MUCOM88 Windows update history
 更新履歴
 ------------------------------------------------------------------------------
 
+2019/01/17 ver0.44
+
+	fmgenのストリームを別スレッドで扱うように修正
+	早いテンポの時に割り込みタイミングの誤差が出るバグを修正
+	タグの文字列をUTF-8として扱うように修正(Windows版も対応予定)
+	マクロ行をタグの文字列と誤認識するバグを修正
+
 2019/01/09 ver0.43
 
 	MUBフォーマットを拡張、正しい音色番号をモニタできるよう修正
