--- a/package/history.txt
+++ b/package/history.txt
@@ -3,6 +3,10 @@ MUCOM88 Windows update history
 更新履歴
 ------------------------------------------------------------------------------
 
+2019/01/21 ver0.45
+
+	外部プログラムと連携するためのプラグインシステムを試験的に導入
+
 2019/01/17 ver0.44
 
 	fmgenのストリームを別スレッドで扱うように修正
