--- a/package/history.txt
+++ b/package/history.txt
@@ -3,9 +3,13 @@ MUCOM88 Windows update history
 更新履歴
 ------------------------------------------------------------------------------
 
-2019/01/21 ver0.45
+2019/01/24 ver0.45
 
-	外部プログラムと連携するためのプラグインシステムを試験的に導入
+	外部プログラムと連携するためのプラグインシステムを導入
+	[ESC]で演奏の停止・再開ができるように修正
+	オートプレイヤーのオプション項目を追加
+	折り返しのある行で行番号が正しく表示されなかったバグを修正
+	ホームからオートプレイヤー起動後に読み込みエラーが発生するバグを修正
 
 2019/01/17 ver0.44
 
