--- a/package/history.txt
+++ b/package/history.txt
@@ -3,6 +3,11 @@ MUCOM88 Windows update history
 更新履歴
 ------------------------------------------------------------------------------
 
+2019/02/01 ver0.46
+
+	オートセーブのオプションを追加
+	演奏データが$DE00を超える大きいサイズの時に停止するバグを修正
+
 2019/01/24 ver0.45
 
 	外部プログラムと連携するためのプラグインシステムを導入
