--- a/package/history.txt
+++ b/package/history.txt
@@ -3,6 +3,12 @@ MUCOM88 Windows update history
 更新履歴
 ------------------------------------------------------------------------------
 
+2019/03/23 ver0.47
+
+	FM音色エディタの連携時にFM音色データが化けることがあったバグを修正
+	FM音色エディタのパラメーター入力時に領域外クリックで解除されるように修正
+	ホーム画面の.mucファイル選択再生時にクロック数を表示するように修正
+
 2019/02/04 ver0.46
 
 	起動時にバージョンアップのチェックを行うように修正
