--- a/package/history.txt
+++ b/package/history.txt
@@ -3,6 +3,15 @@ MUCOM88 Windows update history
 更新履歴
 ------------------------------------------------------------------------------
 
+2019/06/17 ver0.49
+
+	整形ツール使用後にMMLファイルが破壊されることがある不具合を修正
+
+2019/04/03 ver0.48
+
+	長時間放置しているとエラーで落ちることがあったバグを修正
+	禁止されているFM音色@0を使用した際にエラーを出すように修正
+
 2019/03/23 ver0.47
 
 	FM音色エディタの連携時にFM音色データが化けることがあったバグを修正
