--- a/package/history.txt
+++ b/package/history.txt
@@ -3,6 +3,11 @@ MUCOM88 Windows update history
 更新履歴
 ------------------------------------------------------------------------------
 
+2019/09/02 ver0.5
+
+	エディタ保存時にファイルが化けることがある不具合を修正
+	hspmucomプラグインで直接MMLを渡すmucommml命令を追加
+
 2019/06/17 ver0.49
 
 	整形ツール使用後にMMLファイルが破壊されることがある不具合を修正
