--- a/package/history.txt
+++ b/package/history.txt
@@ -3,8 +3,10 @@ MUCOM88 Windows update history
 更新履歴
 ------------------------------------------------------------------------------
 
-2019/09/02 ver0.5
+2019/09/07 ver0.5
 
+	インターフェース表示言語を日本語と英語に切り替えるオプションを追加
+	オートセーブ機能にバックアップ世代の指定を追加
 	エディタ保存時にファイルが化けることがある不具合を修正
 	hspmucomプラグインで直接MMLを渡すmucommml命令を追加
 
