--- a/package/history.txt
+++ b/package/history.txt
@@ -3,14 +3,21 @@ MUCOM88 Windows update history
 更新履歴
 ------------------------------------------------------------------------------
 
-2019/10/02 ver0.5
+2019/11/26 ver0.51
+
+	行番号付きのMMLをコンパイルできるように修正
+	拡張子がn88の行番号付きMMLファイルを読み込めるように修正
+	ファイル保存ダイアログのデフォルトファイル名を追加
+	HOMEのファイルリストをダブルクリックで選択できるように修正
+	wavファイル出力のデフォルト時間を#timeタグで設定できるように修正
+
+2019/10/03 ver0.50
 
 	インターフェース表示言語を日本語と英語に切り替えるオプションを追加
 	オートセーブ機能にバックアップ世代の指定を追加
 	エディタ保存時にファイルが化けることがある不具合を修正
 	hspmucomプラグインで直接MMLを渡すmucommml命令を追加
 	コマンドラインからSCCIデバイスが正常に起動されない不具合を修正
-	最新版のSCCI(2019/07/28)を同梱
 	SCCIデバイスのYM2203に正式対応
 
 2019/06/17 ver0.49
