--- a/package/history.txt
+++ b/package/history.txt
@@ -3,6 +3,10 @@ MUCOM88 Windows update history
 更新履歴
 ------------------------------------------------------------------------------
 
+2019/12/19 ver0.52
+
+	SCCIデバイス使用時に長時間放置した際にエラーが発生する不具合を修正
+
 2019/11/26 ver0.51
 
 	行番号付きのMMLをコンパイルできるように修正
