--- a/package/history.txt
+++ b/package/history.txt
@@ -3,9 +3,11 @@ MUCOM88 Windows update history
 更新履歴
 ------------------------------------------------------------------------------
 
-2019/12/19 ver0.52
+2019/12/20 ver0.52
 
-	SCCIデバイス使用時に長時間放置した際にエラーが発生する不具合を修正
+	SCCI使用時に長時間放置した際に落ちることがある不具合を修正
+	FM音色エディタを単体で使用した際に音色がすぐに反映されない不具合を修正
+	FM音色エディタの描画を高速化
 
 2019/11/26 ver0.51
 
