add -r command line option

--- a/package/history.txt
+++ b/package/history.txt
@@ -3,8 +3,9 @@ MUCOM88 Windows update history
 更新履歴
 ------------------------------------------------------------------------------
 
-2019/12/20 ver0.52
+2020/01/28 ver0.52
 
+	コマンドライン引数にリズム音源ファイルのパスを指定する-rを追加
 	SCCI使用時に長時間放置した際に落ちることがある不具合を修正
 	FM音色エディタを単体で使用した際に音色がすぐに反映されない不具合を修正
 	FM音色エディタの描画を高速化
