--- a/package/history.txt
+++ b/package/history.txt
@@ -3,6 +3,12 @@ MUCOM88 Windows update history
 更新履歴
 ------------------------------------------------------------------------------
 
+2020/03/05 ver0.53
+
+	#driverタグによりMUCOM88ドライバを指定する機能を追加
+	MucomDotNetによるコンパイルと再生に対応
+	vgm/s98ファイル出力に対応
+
 2020/01/28 ver0.52
 
 	コマンドライン引数にリズム音源ファイルのパスを指定する-rを追加
