--- a/package/history.txt
+++ b/package/history.txt
@@ -3,8 +3,9 @@ MUCOM88 Windows update history
 更新履歴
 ------------------------------------------------------------------------------
 
-2020/03/05 ver0.53
+2020/03/14 ver0.53
 
+	#octave reverseタグにより<>()の効果を反転する機能を追加
 	#driverタグによりMUCOM88ドライバを指定する機能を追加
 	MucomDotNetによるコンパイルと再生に対応
 	vgm/s98ファイル出力に対応
