--- a/package/history.txt
+++ b/package/history.txt
@@ -3,6 +3,10 @@ MUCOM88 Windows update history
 更新履歴
 ------------------------------------------------------------------------------
 
+2020/03/22 ver0.54
+
+	コマンドラインからタグ情報のない.mubファイルを再生した際に落ちる不具合を修正
+
 2020/03/15 ver0.53
 
 	#invert onタグにより<>()の効果を反転する機能を追加
