--- a/package/history.txt
+++ b/package/history.txt
@@ -3,8 +3,10 @@ MUCOM88 Windows update history
 更新履歴
 ------------------------------------------------------------------------------
 
-2020/03/22 ver0.54
+2020/04/08 ver0.54
 
+	ツール画面でアプリが落ちることがあった不具合を修正
+	コマンドライン版でコンパイル後に演奏した際に正しくPCMが設定されない不具合を修正
 	コマンドラインからタグ情報のない.mubファイルを再生した際に落ちる不具合を修正
 
 2020/03/15 ver0.53
