--- a/package/history.txt
+++ b/package/history.txt
@@ -3,9 +3,12 @@ MUCOM88 Windows update history
 更新履歴
 ------------------------------------------------------------------------------
 
-2020/04/10 ver0.54
+2020/11/25 ver0.55
 
-	コマンドライン版(UTF8)でMML中の半角カナを正しく評価できるように修正
+	.ini設定ファイルが壊れた時にウインドウが出なくなる不具合を修正
+
+2020/04/09 ver0.54
+
 	ツール画面でアプリが落ちることがあった不具合を修正
 	コマンドライン版でコンパイル後に演奏した際に正しくPCMが設定されない不具合を修正
 	コマンドラインからタグ情報のない.mubファイルを再生した際に落ちる不具合を修正
