Update MUCOM88 Windows to 0.56

--- a/package/history.txt
+++ b/package/history.txt
@@ -3,6 +3,11 @@ MUCOM88 Windows update history
 更新履歴
 ------------------------------------------------------------------------------
 
+2023/12/15 ver0.56
+
+	音色エディタ連携時に音色エディタ側のウインドウを閉じた際にアプリ全体が落ちる不具合を修正
+	Webメニュー選択時の表示を外部のブラウザに変更
+
 2020/11/25 ver0.55
 
 	.ini設定ファイルが壊れた時にウインドウが出なくなる不具合を修正
